gccida/g2/delete_related_insns
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2194:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2194:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2205:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int16 *)insn[1]; 
                 ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2233:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( __int64)insn[4]; 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2238:29: error: expected ')'
delete_related_insns( ( rtx)v12); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2238:21: note: to match this '('
delete_related_insns( ( rtx)v12); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2246:1: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = next_nonnote_insn( ( rtx)v12); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2246:41: error: expected ')'
nonnote_insn = next_nonnote_insn( ( rtx)v12); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2246:33: note: to match this '('
nonnote_insn = next_nonnote_insn( ( rtx)v12); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2247:33: error: use of undeclared identifier 'nonnote_insn'
if ( nonnote_insn && *( _WORD *)nonnote_insn == 33 && ( unsigned __int16)( **( _WORD **)&nonnote_insn[2] - 44) <= 1u ) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2247:6: error: use of undeclared identifier 'nonnote_insn'
if ( nonnote_insn && *( _WORD *)nonnote_insn == 33 && ( unsigned __int16)( **( _WORD **)&nonnote_insn[2] - 44) <= 1u ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2247:90: error: use of undeclared identifier 'nonnote_insn'
if ( nonnote_insn && *( _WORD *)nonnote_insn == 33 && ( unsigned __int16)( **( _WORD **)&nonnote_insn[2] - 44) <= 1u ) 
                                                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2248:23: error: use of undeclared identifier 'nonnote_insn'
delete_related_insns( nonnote_insn); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2253:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = ( _WORD *)insn[2]; 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2266:29: error: expected ')'
delete_related_insns( ( rtx)v19); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2266:21: note: to match this '('
delete_related_insns( ( rtx)v19); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2284:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)insn[3].fld[0]; 
                      ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2301:29: error: expected ')'
delete_related_insns( ( rtx)v7); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2301:21: note: to match this '('
delete_related_insns( ( rtx)v7); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2312:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)insn[1].fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/jump.c:2329:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)insn[1].fld[0]; 
                       ^~~~~~~~~~~~~~
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_related_insns/src/obj/jump.o] Error 1
